welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: missing arguments for method + in class StringAdd;
follow this method with `_' if you want to treat it as a partially applied function
recule(Int +1 = Int)
           ^